// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`interface extends 1`] = `
Program {
  "children": Array [
    Interface {
      "body": Array [],
      "extends": Array [
        Name {
          "kind": "name",
          "name": "B",
          "resolution": "uqn",
        },
      ],
      "kind": "interface",
      "name": Identifier {
        "kind": "identifier",
        "name": "A",
      },
    },
  ],
  "errors": Array [],
  "kind": "program",
}
`;

exports[`interface interface name as identifier 1`] = `
Program {
  "children": Array [
    Interface {
      "body": Array [],
      "extends": null,
      "kind": "interface",
      "name": Identifier {
        "kind": "identifier",
        "name": "A",
      },
    },
  ],
  "errors": Array [],
  "kind": "program",
}
`;

exports[`interface multiple extends 1`] = `
Program {
  "children": Array [
    Interface {
      "body": Array [],
      "extends": Array [
        Name {
          "kind": "name",
          "name": "B",
          "resolution": "uqn",
        },
        Name {
          "kind": "name",
          "name": "C",
          "resolution": "uqn",
        },
      ],
      "kind": "interface",
      "name": Identifier {
        "kind": "identifier",
        "name": "A",
      },
    },
  ],
  "errors": Array [],
  "kind": "program",
}
`;
